--- a/OrmDBPlatform.Core_2.0/OrmDBPlatform.Core_2.0.csproj
+++ b/OrmDBPlatform.Core_2.0/OrmDBPlatform.Core_2.0.csproj
@@ -1,8 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <RootNamespace>OrmDBPlatform.Core_2._0</RootNamespace>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE;NET4</DefineConstants>
   </PropertyGroup>
 
   <Import Project="..\ShareProj\Net_App_Support_Cross.projitems" Label="Shared" />
